implementé muchas cosas

--- a/Web/Views/DownloadWorkflow/ListEnteredRemittances.cshtml
+++ b/Web/Views/DownloadWorkflow/ListEnteredRemittances.cshtml
@@ -37,6 +37,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.State)
             </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Dock)
+            </td>
+            <td>
+                <a asp-action="MerchControl" asp-route-id="@item.Id">Ver detalle</a>
+            </td>
         </tr>
     }
     </tbody>
