--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -36,10 +36,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="DownloadWorkflow" asp-action="ListEnteredRemittances">Remitos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SecurityEntry" asp-action="Index">Descarga</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SecurityEntry" asp-action="Index">Almacenamiento</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Storage" asp-action="PalletsForDownload">Descarga</a>
                         </li>
                         <li class="nav-item">
                             <div class="dropdown">
@@ -52,7 +49,7 @@
                                   <li> <a asp-area="" asp-controller="Client" asp-action="Index">Clientes</a></li>
                                   <li> <a asp-area="" asp-controller="Dock" asp-action="Index">Docks</a></li>
                                   <li> <a asp-area="" asp-controller="Driver" asp-action="Index">Choferes</a></li>
-                                  <li> <a asp-area="" asp-controller="DriverPermit" asp-action="Index">Permidos de conducir</a></li>
+                                  <li> <a asp-area="" asp-controller="DriverPermit" asp-action="Index">Tarjeta Azules</a></li>
                                   <li> <a asp-area="" asp-controller="Entry" asp-action="Index">Pedido</a></li>
                                   <li> <a asp-area="" asp-controller="Merchandise" asp-action="Index">Mercaderia</a></li>
                                   <li> <a asp-area="" asp-controller="MerchandiseInsurance" asp-action="Index">Permiso de mercaderia</a></li>
