--- a/Web/Views/Vehicle/Index.cshtml
+++ b/Web/Views/Vehicle/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Type)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Insurance.Id)
+                @(item.Insurance.ToString())
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
