--- a/Web/Views/Client/Index.cshtml
+++ b/Web/Views/Client/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Cuit)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Address.Id)
+                @(item.Address.ToString())
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
