--- a/Web/Views/DownloadWorkflow/StartDownload.cshtml
+++ b/Web/Views/DownloadWorkflow/StartDownload.cshtml
@@ -1,10 +1,56 @@
-@model IEnumerable<Web.Models.Domain.Merchandise>
+@model Web.Models.Domain.OperationState
 
 @{
     ViewBag.Title = "Descarga";
     Layout = "_Layout";
 }
 
-<h2>Descarga</h2>
-
-
+<h2>Descarga: Puesto @(Model.Dock.Id)</h2>
+<form asp-action="SubmitDownload">
+    <input class="form-check-input" type="hidden" name="OperationId" value="@(Model.Id)"/>
+    <table class="table">
+        <thead>
+        <tr>
+            <th>
+                Descripción
+            </th>
+            <th>
+                Código Externo
+            </th>
+            <th>
+                Cajas por pallet
+            </th>
+            <th>
+                Cantidad de pallets a descargar
+            </th>
+            <th>
+                Cantidad descargada y en buen estado
+            </th>
+        </tr>
+        </thead>
+        <tbody>
+        @foreach (var item in Model.Remittance.Merchandise) {
+            <tr>
+                <th>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </th>
+                <th>
+                    @Html.DisplayFor(modelItem => item.ExternCode)
+                </th>
+                <th>
+                    @Html.DisplayFor(modelItem => item.TotalBoxes)
+                </th>
+                <th>
+                    @Html.DisplayFor(modelItem => item.RequestedPallets)
+                </th>
+                <th>
+                    <input class="form-check-input" name="@(item.Id)" type="number" min="0" max="@(item.RequestedPallets)"/>
+                </th>
+            </tr>
+        }
+        </tbody>
+    </table>
+    <div class="form-group">
+        <input type="submit" value="SubmitDownload" class="btn btn-primary"/>
+    </div>
+</form>
