--- a/Web/Views/Merchandise/Edit.cshtml
+++ b/Web/Views/Merchandise/Edit.cshtml
@@ -19,6 +19,11 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="RequestedPallets" class="control-label"></label>
+                <input asp-for="RequestedPallets" class="form-control" />
+                <span asp-validation-for="RequestedPallets" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ExternCode" class="control-label"></label>
                 <input asp-for="ExternCode" class="form-control" />
                 <span asp-validation-for="ExternCode" class="text-danger"></span>
